--- a/.htaccess
+++ b/.htaccess
@@ -1,46 +1,28 @@
-# Configuración para SH COMPANY SAS
-# Página principal por defecto
+# Configuración para SH COMPANY SAS - Hostinger Compatible
 DirectoryIndex index.html
 
-# Redireccionar index.html a la raíz
+# Redirección simple para index.html
 RewriteEngine On
-RewriteCond %{THE_REQUEST} /([^.]+\.html)[?\s] [NC]
-RewriteRule ^(.+)\.html$ /$1 [R=301,L]
+RewriteCond %{THE_REQUEST} ^[A-Z]{3,}\s/+index\.html[\s?] [NC]
+RewriteRule ^index\.html$ / [R=301,L]
+
+# URLs limpias para archivos HTML
 RewriteCond %{REQUEST_FILENAME} !-d
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteRule ^([^.]+)$ $1.html [L]
 
-# Redirección específica para index.html
-RewriteCond %{THE_REQUEST} ^[A-Z]{3,}\s/+index\.html[\s?] [NC]
-RewriteRule ^index\.html$ / [R=301,L]
-
-# Configuraciones de seguridad y rendimiento
-<IfModule mod_expires.c>
-    ExpiresActive On
-    ExpiresByType text/css "access plus 1 month"
-    ExpiresByType application/javascript "access plus 1 month"
-    ExpiresByType image/png "access plus 1 month"
-    ExpiresByType image/jpg "access plus 1 month"
-    ExpiresByType image/jpeg "access plus 1 month"
-    ExpiresByType image/gif "access plus 1 month"
-    ExpiresByType image/svg+xml "access plus 1 month"
-</IfModule>
-
-# Compresión GZIP
-<IfModule mod_deflate.c>
-    AddOutputFilterByType DEFLATE text/plain
-    AddOutputFilterByType DEFLATE text/html
-    AddOutputFilterByType DEFLATE text/xml
-    AddOutputFilterByType DEFLATE text/css
-    AddOutputFilterByType DEFLATE application/xml
-    AddOutputFilterByType DEFLATE application/xhtml+xml
-    AddOutputFilterByType DEFLATE application/rss+xml
-    AddOutputFilterByType DEFLATE application/javascript
-    AddOutputFilterByType DEFLATE application/x-javascript
-</IfModule>
-
-# Prevenir acceso directo a archivos sensibles
+# Configuraciones básicas de seguridad
 <Files ".htaccess">
-    Order allow,deny
-    Deny from all
+Order allow,deny
+Deny from all
 </Files>
+
+# Cache para archivos estáticos
+<IfModule mod_expires.c>
+ExpiresActive On
+ExpiresByType text/css "access plus 1 month"
+ExpiresByType application/javascript "access plus 1 month"
+ExpiresByType image/png "access plus 1 month"
+ExpiresByType image/jpg "access plus 1 month"
+ExpiresByType image/jpeg "access plus 1 month"
+</IfModule>
