--- a/.htaccess
+++ b/.htaccess
@@ -1,28 +1,33 @@
-# Configuración para SH COMPANY SAS - Hostinger Compatible
+# Configuración para SH COMPANY SAS - URLs Limpias
 DirectoryIndex index.html
 
-# Redirección simple para index.html
 RewriteEngine On
+
+# Redirigir /inicio a la página principal
+RewriteRule ^inicio/?$ /index.html [L]
+
+# Redirección de index.html a raíz
 RewriteCond %{THE_REQUEST} ^[A-Z]{3,}\s/+index\.html[\s?] [NC]
 RewriteRule ^index\.html$ / [R=301,L]
 
-# URLs limpias para archivos HTML
-RewriteCond %{REQUEST_FILENAME} !-d
+# Redireccionar archivos .html a URLs sin extensión
+RewriteCond %{THE_REQUEST} ^[A-Z]{3,}\s/+views/([^.\s]+)\.html[\s?] [NC]
+RewriteRule ^views/([^.]+)\.html$ /$1 [R=301,L]
+
+# Redireccionar archivos .html en raíz a URLs sin extensión
+RewriteCond %{THE_REQUEST} ^[A-Z]{3,}\s/+([^.\s]+)\.html[\s?] [NC]
+RewriteRule ^([^.]+)\.html$ /$1 [R=301,L]
+
+# Servir archivos .html para URLs sin extensión
 RewriteCond %{REQUEST_FILENAME} !-f
-RewriteRule ^([^.]+)$ $1.html [L]
+RewriteCond %{REQUEST_FILENAME} !-d
+RewriteRule ^([^.]+)$ views/$1.html [L]
 
-# Configuraciones básicas de seguridad
-<Files ".htaccess">
-Order allow,deny
-Deny from all
-</Files>
-
-# Cache para archivos estáticos
+# Configuración de cache
 <IfModule mod_expires.c>
 ExpiresActive On
-ExpiresByType text/css "access plus 1 month"
-ExpiresByType application/javascript "access plus 1 month"
-ExpiresByType image/png "access plus 1 month"
-ExpiresByType image/jpg "access plus 1 month"
-ExpiresByType image/jpeg "access plus 1 month"
+ExpiresByType text/css "access plus 1 week"
+ExpiresByType application/javascript "access plus 1 week"
+ExpiresByType image/png "access plus 1 week"
+ExpiresByType image/jpeg "access plus 1 week"
 </IfModule>
