--- a/.htaccess
+++ b/.htaccess
@@ -1,33 +1,50 @@
-# Configuración para SH COMPANY SAS - URLs Limpias
-DirectoryIndex index.html
-
 RewriteEngine On
 
-# Redirigir /inicio a la página principal
-RewriteRule ^inicio/?$ /index.html [L]
-
-# Redirección de index.html a raíz
+# Redirigir index.html a la raíz
 RewriteCond %{THE_REQUEST} ^[A-Z]{3,}\s/+index\.html[\s?] [NC]
 RewriteRule ^index\.html$ / [R=301,L]
 
-# Redireccionar archivos .html a URLs sin extensión
+# Remover extensión .html de las URLs
+RewriteCond %{THE_REQUEST} ^[A-Z]{3,}\s/+(.*)\.html[\s?] [NC]
+RewriteRule ^(.*)\.html$ /$1 [R=301,L]
+
+# Redirigir URLs de views/ a URLs limpias
 RewriteCond %{THE_REQUEST} ^[A-Z]{3,}\s/+views/([^.\s]+)\.html[\s?] [NC]
 RewriteRule ^views/([^.]+)\.html$ /$1 [R=301,L]
 
-# Redireccionar archivos .html en raíz a URLs sin extensión
-RewriteCond %{THE_REQUEST} ^[A-Z]{3,}\s/+([^.\s]+)\.html[\s?] [NC]
-RewriteRule ^([^.]+)\.html$ /$1 [R=301,L]
-
-# Servir archivos .html para URLs sin extensión
+# Servir archivos HTML para URLs limpias
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
-RewriteRule ^([^.]+)$ views/$1.html [L]
+RewriteCond %{DOCUMENT_ROOT}/views/$1.html -f
+RewriteRule ^([^/]+)/?$ views/$1.html [L]
 
-# Configuración de cache
+# Servir index.html para la raíz
+RewriteCond %{REQUEST_FILENAME} !-f
+RewriteCond %{REQUEST_FILENAME} !-d
+RewriteRule ^$ index.html [L]
+
+# Configuración de compresión y caché
+<IfModule mod_deflate.c>
+    AddOutputFilterByType DEFLATE text/plain
+    AddOutputFilterByType DEFLATE text/html
+    AddOutputFilterByType DEFLATE text/xml
+    AddOutputFilterByType DEFLATE text/css
+    AddOutputFilterByType DEFLATE application/xml
+    AddOutputFilterByType DEFLATE application/xhtml+xml
+    AddOutputFilterByType DEFLATE application/rss+xml
+    AddOutputFilterByType DEFLATE application/javascript
+    AddOutputFilterByType DEFLATE application/x-javascript
+</IfModule>
+
 <IfModule mod_expires.c>
-ExpiresActive On
-ExpiresByType text/css "access plus 1 week"
-ExpiresByType application/javascript "access plus 1 week"
-ExpiresByType image/png "access plus 1 week"
-ExpiresByType image/jpeg "access plus 1 week"
+    ExpiresActive on
+    ExpiresByType text/css "access plus 1 year"
+    ExpiresByType application/javascript "access plus 1 year"
+    ExpiresByType image/png "access plus 1 year"
+    ExpiresByType image/jpg "access plus 1 year"
+    ExpiresByType image/jpeg "access plus 1 year"
+    ExpiresByType image/gif "access plus 1 year"
+    ExpiresByType image/ico "access plus 1 year"
+    ExpiresByType image/icon "access plus 1 year"
+    ExpiresByType text/html "access plus 1 month"
 </IfModule>
